# asyncio-example

./: LICENSE  pyproject.toml
example/: MOCK_DATA.csv  basic.py  sync-code.py
tests/: test_asyncio.py
