[tool.poetry]
name = "asyncio-example"
version = "0.1.0"
description = ""
authors = ["Itay Waisman <itay.waisman@explorium.ai>"]

[tool.poetry.dependencies]
python = "3.8.10"
uvloop = "^0.16.0"
aiohttp = "^3.7.4"
pandas = "^1.3.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
